--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,6 +10,22 @@ button {
   -webkit-tap-highlight-color: transparent;
 }
 
+button {
+  border: none;
+  font-size: inherit;
+  outline: none;
+}
+
 body {
+  padding: 50px;
   background-color: lightgrey;
+}
+
+.container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 50px;
+
+  background-color: #fff;
 }
